# apple-cli

./: .gitignore  MANIFEST.in  Makefile  README.md  calendar_app.py  contacts_app.py  mail_app.py  notes_app.py  pyproject.toml  reminders_app.py
.github/workflows/: ci.yml  create-release.yml
src/apple_cli/: calendar_app.py  contacts_app.py  mail_app.py  notes_app.py  reminders_app.py
tests/: test_calendar_app.py  test_contacts_app.py  test_mail_app.py  test_notes_app.py  test_reminders_app.py
