[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-cli"
dynamic = ["version"]
description = "CLI tooling for Apple Mail via AppleScript"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mail-app = "mail_app:main"
reminders-app = "reminders_app:main"
calendar-app = "calendar_app:main"

[tool.setuptools]
py-modules = ["mail_app", "reminders_app", "calendar_app", "version"]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}
